#
# Copyright 2018-2020 TON DEV SOLUTIONS LTD.
#
# Licensed under the SOFTWARE EVALUATION License (the "License"); you may not use
# this file except in compliance with the License.  You may obtain a copy of the
# License at:
#
# https://www.ton.dev/licenses
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific TON DEV software governing permissions and limitations
# under the License.
#

[package]
edition = "2018"
build = "build.rs"
name = "ton_types"
version = "1.10.2"

[dependencies]
lockfree = { git = "https://github.com/tonlabs/lockfree.git" }

# External
base64 = "0.13"
crc = "1.8.1"
hex = "0.4"
log = "0.4"
num = "0.3"
num-traits = "0.2"
num-derive = "0.3"
rand = "0.7.3"
sha2 = "0.9"
anyhow = "1"
thiserror = "1.0.26"

[features]
asm = ["sha2/asm"]