#
# Copyright 2018-2020 TON DEV SOLUTIONS LTD.
#
# Licensed under the SOFTWARE EVALUATION License (the "License"); you may not use
# this file except in compliance with the License.  You may obtain a copy of the
# License at:
#
# https://www.ton.dev/licenses
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific TON DEV software governing permissions and limitations
# under the License.
#

[package]
edition = "2021"
name = "ton_types"
version = "1.10.2"

[dependencies]
anyhow = "1"
base64 = "0.13"
countme = "3.0.0"
crc = "3.0.0"
dashmap = "5.2.0"
hex = "0.4.3"
log = "0.4"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
rand = "0.8"
rustc-hash = "1.1.0"
sha2 = "0.9.9"
smallvec = { version = "1.8.0", features = ["const_generics", "union", "write"] }
thiserror = "1.0.26"

[features]
profile = ['countme/enable']
